--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,5 +1,13 @@
 @import './normalize.css';
-body {
+* {
   padding: 0;
   margin: 0;
+}
+body{
+  width: 100%;
+  min-width: 320px;
+  max-width: 640px;
+  margin: 0 auto;
+  font-family: -apple-system, Helvetica, sans-serif;
+  line-height: 1.5;
 }
