--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -2,6 +2,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 body{
   width: 100%;
@@ -10,4 +11,31 @@ body{
   margin: 0 auto;
   font-family: -apple-system, Helvetica, sans-serif;
   line-height: 1.5;
+  /* background-color:#f2f2f2; */
+  background-color:#cfb7b7;
+
+}
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?g2x5vf');
+  src:  url('../fonts/icomoon.eot?g2x5vf#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?g2x5vf') format('truetype'),
+    url('../fonts/icomoon.woff?g2x5vf') format('woff'),
+    url('../fonts/icomoon.svg?g2x5vf#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+a{
+  text-decoration: none;
+}
+
+li{
+  list-style: none;
+
+}
+img{
+  vertical-align: bottom;
 }
